change library: wiringpi to rppal

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "seven-seg"
 version = "0.1.0"
-authors = ["pi"]
+authors = ["kabbalah"]
 
 [dependencies]
-wiringpi = "0.2"
+rppal = { version = "^0.11", features = ["hal"] }
