--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,17 @@ name = "seven-seg"
 version = "0.1.0"
 authors = ["kabbalah"]
 
+[profile.release]
+opt-level = 'z'
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
+panic = 'abort'
+incremental = false
+overflow-checks = false
+
 [dependencies]
 rppal = { version = "^0.11", features = ["hal"] }
+ctrlc = "*"
