--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ incremental = false
 overflow-checks = false
 
 [dependencies]
-rppal = { version = "^0.11", features = ["hal"] }
+rppal = { version = "0.14.1", features = ["hal"] }
 ctrlc = "*"
